--- a/client/public/VenueDetail.css
+++ b/client/public/VenueDetail.css
@@ -22,6 +22,7 @@
   font-family: 'Oswald', sans-serif;
   font-size: 50px;
   font-weight: 700;
+  overflow-y: scroll;
 }
 
 .venue-basic-info {
